[tool.poetry]
name = "tqdm-countdown"
version = "0.1.0"
description = "Progress bars - now with added drama!"
authors = ["tcbegley <tomcbegley@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
tqdm = "^4.56.2"
pygame = "^2.0.1"
importlib_resources = { version = "^5.1.0", python = "<3.9" }

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
